<!--/*      Created by Roberto Mariani and Anna Berkovitch, 2015-2016-->
    <!--This program is free software: you can redistribute it and/or modify-->
    <!--it under the terms of the GNU General Public License as published by-->
    <!--the Free Software Foundation, either version 3 of the License, or-->
    <!--(at your option) any later version.-->

    <!--This program is distributed in the hope that it will be useful,-->
    <!--but WITHOUT ANY WARRANTY; without even the implied warranty of-->
    <!--MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the-->
    <!--GNU General Public License for more details.-->

    <!--You should have received a copy of the GNU General Public License-->
    <!--along with this program.  If not, see <http://www.gnu.org/licenses/>.*/-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">DeoXPer RomControl</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">DeoXPer Pure MM 3.0 Changelog%1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="notif_power_prefs">Notifications - Notif Panel</string>
    <string name="buttons_prefs">Buttons mods</string>
    <string name="back_button_category">Back Button mods</string>
    <string name="notifications_category">Notifications mods</string>
    <string name="power_menu_category">Power Menu mods</string>
    <string name="recents_category">Recent Apps Panel mods</string>
    <string name="adviced_apps">Recommended Apps</string>
    <string name="adviced_apps_category">Recommended Apps</string>
    <string name="notifpanel_statusbar_category">Notification Panel and Status Bar mods</string>
    <string name="audio_prefs">Audio mods</string>
    <string name="general_volume_category">General Volume mods</string>
    <string name="sound_equalizer_category">Sound equalizer mods</string>
    <string name="power_recents_prefs">Power Menu - Recents Panel</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set app theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About Us</string>
    <string name="showed">Shown</string>
    <string name="hidden">Hidden</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="useful_links">Useful Links</string>
    <string name="our_team">Our Team</string>
    <string name="credits_thanks">Credits and Thanks</string>
    <string name="about_us_title">About DeoXPer and RomControl</string>
    <string name="dxp_thread_title">XDA DeoXPer Thread</string>
    <string name="dxp_page_title">G+ DeoXPer Page</string>
    <string name="rc_thread_title">XDA RomControl Thread</string>
    <string name="trd_thread_link">http://forum.xda-developers.com/android/general/source-code-6thgear-romcontrol-v2-devs-t3411916</string>
    <string name="dxp_page_link">https://plus.google.com/collection/Ati8gB</string>
    <string name="lucadalba_info">lucadalba\nDeoXPer ROM Developer</string>
    <string name="daxgirl_info">daxgirl\n6thGear RomControl Developer</string>
    <string name="wuby_info">Wuby986\n6thGear RomControl Developer</string>
    <string name="app_not_installed">App not installed</string>
    <string name="confirm">confirm</string>
    <string name="based_on">based on 6thGear RomControl</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="backup_data">Backup data</string>
    <string name="restore_data">Restore data</string>
    <string name="right">Right</string>
    <string name="left">Left</string>



    <string name="lock_notif_number">Lockscreen notifications number</string>
    <string name="sfind_qconnect_notifpanel">SFind &amp; QConnect in notification panel</string>
    <string name="brightness_notifpanel">Brightness slider in notification panel</string>
    <string name="lock_notifpanel">Lock button into notification panel</string>
    <string name="recents_notifpanel">Recents button into notification panel</string>
    <string name="powermenu_notifpanel">PowerMenu button in notification panel</string>
    <string name="powermenu_notifpanel_color">Notification panel Power button color</string>
    <string name="upload">Show only Upload</string>
    <string name="download">Show only Download</string>
    <string name="upload_download">Show Download and Upload</string>
    <string name="headsup_notifications">Heads Up notifications</string>
    <string name="font_normal">Normal</string>
    <string name="font_bold">Bold</string>
    <string name="font_italic">Italic</string>
    <string name="font_bold_italic">Bold Italic</string>
    <string name="info_to_display">Information to display</string>
    <string name="use_byte">Use Byte as unit</string>
    <string name="bytes">Using Byte</string>
    <string name="bit">Using bit</string>
    <string name="net_indicator">Network Speed Indicator</string>
    <string name="net_text">Network speed text</string>
    <string name="net_arrows">Arrow indicators</string>
    <string name="show_arrows">Show arrows</string>
    <string name="arrows_position">Arrows position</string>
    <string name="hide_low_traffic">Autohide with low traffic</string>
    <string name="displaying_options">Dispalying options</string>
    <string name="minspeed_tohide">Min speed for hiding indicator</string>
    <string name="font_style">Font style</string>
    <string name="text_size">Text size</string>
    <string name="colors">Colors</string>
    <string name="sel_separate">Separate colors for text and arrows</string>
    <string name="col_separated">Text and arrows can be colored separately</string>
    <string name="col_same">Text and arrows will get the same color</string>
    <string name="speed_color">Speed text color</string>
    <string name="arrows_color">Arrow indicators color</string>
    <string name="ota_updates">DeoXPer OTA Updates</string>



    <!--This will be the dialog title.
    Put your own rom version and name.
    Have fun-->
    <string name="rom_version_for_changelog"> </string>


    <string name="quicklaunch_recents">Quick App Launcher into recents</string>
    <string name="screenshot_powermenu">Screenshot into power menu</string>
    <string name="screenrec_powermenu">Screenrecorder into power menu</string>
    <string name="flashlight_powermenu">Torch into power menu</string>
    <string name="soundmode_powermenu">Sound Bar into power menu</string>


    <string name="volume_warning">Volume warning with headphones</string>


    <string name="back_to_forceclose">Long press Back to FORCE CLOSE app</string>


    <string name="deoxperinfo_desc">This app contains really useful information and links about the rom</string>
    <string name="boefflaconfig_desc">This app will allow you to customize Boeffla Kernel parameters. Be CAREFULLY when you use it</string>
    <string name="viper_desc">This app will allow you to improve your audio thanks to ViPER4Android mods</string>

    <!--These strings are to set the default fragment to open for the first time the app launches-->
</resources>
