<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/notifpanel_statusbar_category">

        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
            android:title="@string/brightness_notifpanel"
            android:summaryOn="@string/showed"
            android:summaryOff="@string/hidden"
            android:key="notification_panel_brightness_adjustment"
            android:defaultValue="true" />

        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
            android:title="@string/sfind_qconnect_notifpanel"
            android:summaryOn="@string/showed"
            android:summaryOff="@string/hidden"
            android:key="sfind_qconnect_notifpanel"
            android:defaultValue="true"
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />

        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
            android:title="@string/lock_notifpanel"
            android:summaryOn="@string/showed"
            android:summaryOff="@string/hidden"
            android:key="cocoyaya_rightcornerlock"
            android:defaultValue="true" />

        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
            android:title="@string/recents_notifpanel"
            android:summaryOn="@string/showed"
            android:summaryOff="@string/hidden"
            android:key="cocoyaya_rightcornertask"
            android:defaultValue="true" />

        <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference
            android:title="@string/powermenu_notifpanel"
            android:summaryOn="@string/showed"
            android:summaryOff="@string/hidden"
            android:key="gear_reboot_view_visibility"
            android:defaultValue="true"
            app:dependentValue="false" />

        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:title="@string/powermenu_notifpanel_color"
            android:key="gear_reboot_view_color"
            android:defaultValue="#FFFFFFFF"
            android:dependency="gear_reboot_view_visibility" />

        <PreferenceScreen android:title="@string/net_indicator">

            <PreferenceCategory android:title="@string/net_text">

                <com.wubydax.romcontrol.v2.prefs.MyListPreference
                    android:title="@string/info_to_display"
                    android:key="network_traffic_state"
                    android:defaultValue="3"
                    app:dependentValue="0"
                    android:entryValues="@array/traffic_state_values"
                    android:entries="@array/traffic_state_items"/>

                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="@string/use_byte"
                    android:summaryOff="@string/bit"
                    android:summaryOn="@string/bytes"
                    android:defaultValue="true"
                    android:key="network_traffic_unit"
                    android:dependency="network_traffic_state"/>

            </PreferenceCategory>

            <PreferenceCategory android:title="@string/net_arrows" android:dependency="network_traffic_state">

                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="@string/show_arrows"
                    android:key="network_traffic_show_arrows"
                    android:defaultValue="true"
                    android:summaryOff="@string/hidden"
                    android:summaryOn="@string/showed"
                    android:dependency="network_traffic_state"/>

                <com.wubydax.romcontrol.v2.prefs.MyListPreference
                    android:title="@string/arrows_position"
                    android:key="network_traffic_arrows_position"
                    android:dependency="network_traffic_show_arrows"
                    android:defaultValue="0"
                    android:entryValues="@array/arrow_position_values"
                    android:entries="@array/arrow_position_entries"/>

            </PreferenceCategory>

            <PreferenceCategory android:title="@string/displaying_options" android:dependency="network_traffic_state">

                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="@string/hide_low_traffic"
                    android:key="network_traffic_autohide"
                    android:defaultValue="false"
                    android:summaryOff="@string/disabled"
                    android:summaryOn="@string/enabled"/>

                <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
                    android:title="@string/minspeed_tohide"
                    app:unitsValue="Kb"
                    app:maxValue="100"
                    android:key="network_traffic_threshold"
                    android:defaultValue="10"
                    android:dependency="network_traffic_autohide"/>

                <com.wubydax.romcontrol.v2.prefs.MyListPreference
                    android:title="@string/font_style"
                    android:key="network_traffic_text_style"
                    android:defaultValue="0"
                    android:entries="@array/traffic_style_entries"
                    android:entryValues="@array/traffic_style_entry_values"/>

                <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
                    android:title="@string/text_size"
                    android:key="network_traffic_scale"
                    app:maxValue="10"
                    android:defaultValue="10"/>

            </PreferenceCategory>

            <PreferenceCategory android:title="@string/colors" android:dependency="network_traffic_state">

                <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
                    android:title="@string/sel_separate"
                    android:key="network_traffic_global_color"
                    android:defaultValue="true"
                    android:summaryOn="@string/col_separated"
                    android:summaryOff="@string/col_same"/>

                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="@string/speed_color"
                    android:key="network_traffic_color"
                    android:defaultValue="#ffffff"/>

                <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
                    android:title="@string/arrows_color"
                    android:key="network_traffic_arrow_color"
                    android:defaultValue="#ffffff"
                    android:dependency="network_traffic_global_color"/>

            </PreferenceCategory>

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications_category">

        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="@string/headsup_notifications"
            android:summaryOn="@string/enabled"
            android:summaryOff="@string/disabled"
            android:key="heads_up_notifications_enabled"
            android:defaultValue="true" />

        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference
            android:title="@string/lock_notif_number"
            android:key="lockscreen_notifications"
            app:minValue="1"
            app:maxValue="4"
            android:defaultValue="4"
            app:packageNameToKill="com.android.systemui"
            app:isSilent="false" />

    </PreferenceCategory>

</PreferenceScreen>