<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general_volume_category">

        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:title="@string/volume_warning"
            android:summaryOn="@string/showed"
            android:summaryOff="@string/disabled"
            android:key="volume_warning"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sound_equalizer_category">

        <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
            android:summary="@string/viper_desc"
            app:componentName="com.vipercn.viper4android_v2/com.vipercn.viper4android_v2.activity.ViPER4Android" />

    </PreferenceCategory>

</PreferenceScreen>